2020-12-04 Jan Kotanski <jan.kotanski@desy.de>
	* add load_file from a memory buffer for h5py module
	* tagged as 2.53.0

2020-12-02 Jan Kotanski <jan.kotanski@desy.de>
	* add support for get_substream_list for ASAPO 20.09.1
	* tagged as 2.52.5

2020-12-01 Jan Kotanski <jan.kotanski@desy.de>
	* set asapo broker timeout
	* tagged as 2.52.4

2020-11-30 Jan Kotanski <jan.kotanski@desy.de>
	* fix fetching metadata from CBF files in py3
	* tagged as 2.52.3

2020-11-30 Jan Kotanski <jan.kotanski@desy.de>
	* remove printouts
	* tagged as 2.52.2

2020-11-26 Jan Kotanski <jan.kotanski@desy.de>
	* add ASAPO help
	* tagged as 2.52.1

2020-11-25 Jan Kotanski <jan.kotanski@desy.de>
	* add ASAPO image source
	* tagged as 2.52.0

2020-10-21 Jan Kotanski <jan.kotanski@desy.de>
	* change PyTango to tango
	* tagged as 2.51.0

2020-10-20 Jan Kotanski <jan.kotanski@desy.de>
	* remove cffi
	* tagged as 2.50.1

2020-10-20 Jan Kotanski <jan.kotanski@desy.de>
	* change QThread to OmniQThread
	* tagged as 2.50.0

2020-10-13 Jan Kotanski <jan.kotanski@desy.de>
	* add fix for reload files
	* tagged as 2.49.4

2020-10-13 Jan Kotanski <jan.kotanski@desy.de>
	* update help and tips
	* tagged as 2.49.3

2020-10-09 Jan Kotanski <jan.kotanski@desy.de>
	* fix setting bright/dark field correction from LavueController
	* tagged as 2.49.2

2020-10-07 Jan Kotanski <jan.kotanski@desy.de>
	* fix for bright/dark field correction
	* tagged as 2.49.1

2020-10-06 Jan Kotanski <jan.kotanski@desy.de>
	* add reload button
	* add bright/dark field correction
	* add growing_dim and frame parameter to the imagefile command-line option
	* tagged as 2.49.0

2020-09-29 Jan Kotanski <jan.kotanski@desy.de>
	* fix for updating of toolconfig
	* implement configuration for specialized tools
	* add configuration path, organization and domain to command-line parameters
	* fix automatic change of datasources in ZMQ stream
	* tagged as 2.48.0

2020-09-17 Jan Kotanski <jan.kotanski@desy.de>