@@ -682,6 +682,14 @@ class PNIAttributeManager(filewriter.FTAttributeManager):
         return PNIAttribute(
             self._h5object.__getitem__(name), self.parent)
 
+    def names(self):
+        """ key values
+
+        :returns: attribute names
+        :rtype: :obj:`list` <:obj:`str`>
+        """
+        return [att.name for att in self._h5object]
+
     def close(self):
         """ close attribure manager
         """
