@@ -1180,6 +1180,7 @@ class PNIWriterTest(unittest.TestCase):
             self.assertEqual(fl.readonly, False)
             self.assertEqual(fl.h5object.readonly, False)
 
+            self.assertEqual(fl.default_field(), None)
             fl.close()
 
             fl.reopen(True)
@@ -2454,6 +2455,7 @@ class PNIWriterTest(unittest.TestCase):
             self.assertEqual(fl.readonly, False)
             self.assertEqual(fl.h5object.readonly, False)
 
+            self.assertEqual(fl.default_field().name, "lkfloatvec")
             fl.close()
 
             fl.reopen(True)
