@@ -1,5 +1,6 @@
 2020-12-04 Jan Kotanski <jan.kotanski@desy.de>
 	* add load_file from a memory buffer for h5py module
+	* add FTFile.default_field() and FTAttributeManager.names() methods
 	* tagged as 2.53.0
 
 2020-12-02 Jan Kotanski <jan.kotanski@desy.de>
